--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,
+  "contributors": [
+    "Saurav Kumar <sauravk7077@gmail.com>"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
